[package]
name = "dex-reentrancy-poc"
version = "0.1.0"
authors = ["tokenize-x"]
edition = "2021"

exclude = ["dex-reentrancy-poc.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
cosmwasm_2_0 = ["cosmwasm-std/cosmwasm_2_0"]
library = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.test]
incremental = true

[dependencies]
tx-wasm-sdk = { git = "https://github.com/tokenize-x/tx-wasm-sdk.git", tag = "v1.3.0" }
cosmwasm-schema = "2.3.2"
cosmwasm-std = { version = "2.3.2", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.4"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0.18"
