[package]
name = "asset-extension"
version = "0.1.0"
authors = ["tokenize-x"]
edition = "2021"

exclude = ["simple_state.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.3.2", features = ["cosmwasm_2_0"] }
cw2 = "2.0.0"
thiserror = "2.0.18"
cosmwasm-schema = "2.3.2"
tx-wasm-sdk = "1.3.0"
cw-storage-plus = "2.0.0"
prost = "0.13.5"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-cw-value = "0.7.0"
